# esp_idf_template

./: Cargo.toml  install-ssh.sh  sdkconfig
.cargo/: config
src/: main.rs
